--- a/test/测试报告.md
+++ b/test/测试报告.md
@@ -1,1 +1,12 @@
 ![Alt text](测试1.png)
+![Alt text](测试2.png)
+![Alt text](面积图1.png)
+![Alt text](面积图2.png)
+![Alt text](折线图.png)
+![Alt text](柱状图1.png)
+![Alt text](柱状图2.png)
+![Alt text](散点图.png)
+![Alt text](位置散点图1.png)
+![Alt text](位置散点图错误图.png)
+![Alt text](热力图.png)
+![Alt text](3D图.png)
