--- a/test/测试报告.md
+++ b/test/测试报告.md
@@ -10,3 +10,8 @@
 ![Alt text](位置散点图错误图.png)
 ![Alt text](热力图.png)
 ![Alt text](3D图.png)
+![Alt text](image.png)
+![Alt text](image-1.png)
+![Alt text](image-2.png)
+![Alt text](image-3.png)
+![Alt text](image-4.png)
